# POC-Runtime-Shared-Library

app_runtime_linking/: main.cpp
app_runtime_linking/my_dll/: CMakeLists.txt  my_dll.cpp  my_dll.h
app_runtime_linking/ui/: index.html  main.js  package.json  preload.js  renderer.js
dlopen_plugin/: main.cpp
dlopen_plugin/my_dll/: CMakeLists.txt  my_dll.cpp  my_dll.h
load_plugin_runtime/: CMakeLists.txt  Makefile  load_plugin_runtime.cpp
load_plugin_runtime/shared_lib/: CMakeLists.txt  shared_lib.h
shared_lib/: main.cpp  shared_lib.cpp
